# mlops

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements-databricks.txt  requirements.txt
.github/workflows/: ci.yml  data_pipeline.yml  mlops_pipeline.yml  prod_release.yml  prod_rollback.yml  prod_smoke_test.yml
configs/: config.yaml
src/biometric/: download.py  loader.py  model.py  preprocess.py  preprocess_spark.py
src/inference/: batch_predict.py  generate_payload.py  predict.py
src/training/: bootstrap_databricks_env.py  copy_uc_model_version.py  create_or_run_databricks_job.py  databricks_job_entrypoint.py  load_and_predict.py  preprocess_databricks_job.py  register_model.py  save_registered_model.py  train.py  trigger_databricks_job.py
tests/: test_pipeline.py
